objects/Channel_Partner_on_site_Audit__c.object
<CustomObject>
    <fields>
        <fullName>Training_OPtions__c</fullName>
        <inlineHelpText>Type of training the partner provides to his customers in connection to ABB products</inlineHelpText>
        <label>Training Options</label>
        <picklist>
            <picklistValues>
                <fullName>Classroom Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Training on request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Training always after commissioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>not available</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Training_Plan_available__c</fullName>
        <inlineHelpText>Is the Training Plan available to complete the competence gap? Present the training plan for service employees with schedule.</inlineHelpText>
        <label>Training Plan available</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not handled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Warehouse_suitable_for_stocking_Flag__c</fullName>
        <formula>IF( NOT(Warehouse_suitable_for_stocking__c), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse_suitable_for_stocking__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Warehouse area suitable for spares stocking and handling 
See manufacturer instructions for safety, environment (humidity, temperature)</inlineHelpText>
        <label>Warehouse suitable for stocking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Warranty_handling_procedure_known_Flag__c</fullName>
        <formula>IF( NOT(Warranty_handling_procedure_known__c), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_handling_procedure_known__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Warranty handling procedure known</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Warranty_repairs_handled_by_partner_Flag__c</fullName>
        <formula>IF( NOT(Warranty_repairs_handled_by_partner__c), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_repairs_handled_by_partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Warranty repairs handled by partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Working_hour_rate_for_warranty_agreed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Price from partner to ABB when ABB subsupplies partner for warranty repairs</inlineHelpText>
        <label>Working hour rate for warranty agreed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Working_process_and_instructions_availab__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Working process and instructions/ check lists when working onsite available</inlineHelpText>
        <label>Working process and instructions availab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_people_in_operative_cabinet__c</fullName>
        <label># of people in operative cabinet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_persons_technically_authorized__c</fullName>
        <description>R7A - Channel Authorization</description>
        <inlineHelpText>Minimum 1 person;  If after sales services is provided , typically minimum 2 persons are required.</inlineHelpText>
        <label># of persons technically authorized</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>people_for_automation_engineering__c</fullName>
        <label># people for automation engineering</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>people_for_electrical_engineering__c</fullName>
        <label># people for electrical engineering</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>personnel_for_commissioning__c</fullName>
        <inlineHelpText># personnel available for commissioning for the authorized product range. Put zero if not applicable</inlineHelpText>
        <label># personnel for commissioning</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>persons_for_engineering__c</fullName>
        <inlineHelpText>Define the total number of Engineers within the scope who passed the authorization.</inlineHelpText>
        <label># persons for engineering</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Channel Partner on-site Audit</label>
    <nameField>
        <label>Channel Partner on-site Audit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Channel Partner on-site Audits</pluralLabel>
    <recordTypes>
        <fullName>Engineerig</fullName>
        <active>true</active>
        <description>This Record Type is used to document the partner&apos;s engineering and/or cabinet building capabilities</description>
        <label>Engineering</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales</fullName>
        <active>true</active>
        <description>This Record Type is used to document the partner&apos;s Sales capabilities</description>
        <label>Sales</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service</fullName>
        <active>true</active>
        <description>This Record Type is used to document the partner&apos;s Service capabilities</description>
        <label>Service</label>
    </recordTypes>
    <recordTypes>
        <fullName>Support</fullName>
        <active>true</active>
        <description>This Record Type is used to document the partner&apos;s Support and/or commissioning capabilities</description>
        <label>Support</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validate_the_fields_on_status_change</fullName>
        <active>true</active>
        <description>R7 - Validate the required fields are filled out to change status to Completed</description>
        <errorConditionFormula>AND(ISPICKVAL(Status__c, &apos;Completed&apos;), 
OR( 
AND( 
RecordType.Name = &quot;Sales&quot;, OR(ISPICKVAL(Status__c,&apos;&apos;), ISNULL( Date_of_onsite_Audit__c ), ISNULL(Number_of_Sales_People_trained__c), NOT(Warranty_handling_procedure_known__c), 
NOT(Process_for_fast_order_handling_known__c), NOT(Sales_support_available_from_ABB_known__c), NOT(Access_and_user_knowledge_to_sales_tools__c), NOT(Product_brochures_and_flyers_available__c)) 
),	
AND ( 
RecordType.Name = &quot;Service&quot;, OR(ISNULL(No_of_people_with_service_authorization__c), NOT(Report_for_field_repair_available__c), ISPICKVAL(Access_to_service_spares__c, &apos;&apos;), 
NOT(Tools_collaboration_system_is_in_use__c), NOT(Relevant_HSE_aspects_know_and_followed__c), NOT(Spare_part_operations_handled_by_partner__c), NOT(Competent_people_for_spare_parts__c), NOT(Warehouse_suitable_for_stocking__c), NOT(Warranty_repairs_handled_by_partner__c), NOT(Competent_field_service_personnel__c), NOT(ABB_Warranty_rules_and_instructions__c), 
NOT(Access_to_all_warranty_material__c), NOT(Defective_material_stored_and_handled__c)) 
),	
AND ( 
RecordType.Name = &quot;Support&quot;, OR(ISPICKVAL(Status__c,&apos;&apos;), ISNULL( Date_of_onsite_Audit__c ), NOT(Customer_Access__c), NOT(Technical_support_available_from_ABB__c),ISPICKVAL(Commissioning_provided_actively__c,&apos;&apos;),ISNULL(personnel_for_commissioning__c),
ISNULL(of_persons_technically_authorized__c)) 
), 
AND ( 
RecordType.Name = &quot;Engineering&quot;, OR(ISNULL(persons_for_engineering__c), NOT(ESD_handling_process_known_and_utilized__c), ISPICKVAL(Own_Cabinet_panel_building__c, &apos;&apos;)) 
)	
))</errorConditionFormula>
        <errorMessage>Status cannot be changed as not all Red Flag marked mandatory fields are answered. You might need to change Status back to &quot;Draft&quot; to save and see if Red Flagged fields were missed in earlier stages</errorMessage>
    </validationRules>
</CustomObject>